--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
 
-button[data-setter] {
-  outline: none;
-  background: transparent;
-  border: none;
+.bottom_button {
+  cursor: pointer;
   font-family: 'Roboto';
   font-weight: 300;
   font-size: 18px;
-  width: 25px;
-  height: 30px;
-  color: #F7958E;
-  cursor: pointer;
+  background: transparent;
+  width: 100%;
+  border: 1px solid;
+  border-color: #F7958E;
+  border-radius: 2px;
 }
 
 button[data-setter]:hover { opacity: 0.5; }
@@ -108,7 +107,3 @@ button[data-setter]:hover { opacity: 0.5; }
 #e-pointer { transition: transform 0.7s; }
 h1 { margin-top:150px; text-align:center;}
 body { background-color:#f7f7f7;}
-
-.bottom_button {
-  width: 100%;
-}
