--- a/button-styles.css
+++ b/button-styles.css
@@ -24,7 +24,7 @@
 }
 .myButton:active {
 	position:relative;
-	top:1px;
+	top: 161px;
 }
 
 .text {
@@ -35,4 +35,8 @@
   top: 25px;
   font-size: 25px;
   font-weight: 400;
+}
+
+.container {
+  width: 100%;
 }
