--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
 
+.pictures_holder {
+  margin: 0 auto;
+  height: 160px;
+  display: flex;
+}
+
 .logo {
-    display: block;
-    margin: 0 auto;
-    width: 20%;
-    padding-left: 19px;
+  position: absolute;
+  padding-left: 8px;
+  margin-left: -130px;
+  left: 50%;
+}
+
+.qrcode {
+  position: absolute;
+  top: 0px;
+  right: 0px;
 }
 
 .button_holder {
