--- a/button-styles.css
+++ b/button-styles.css
@@ -14,7 +14,7 @@
   text-shadow:-2px -2px 10px #854629;
   top: 160px;
   margin: 0 auto;
-  width: 20%;
+  width: 550px;
   position: relative;
   text-align: center;
 }
