--- a/button-styles.css
+++ b/button-styles.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
+
+* { box-sizing: border-box; }
+
+body { font-family: 'Roboto'; }
+
+button:focus { outline: none; }
+
 .myButton {
 	box-shadow:inset 0px 0px 50px -5px #cf866c;
 	background:linear-gradient(to bottom, #d0451b 5%, #bc3315 100%);
@@ -7,36 +15,46 @@
 	display: block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family:inherit;
 	font-size:21px;
-	padding:28px 42px;
+	font-weight: 700;
+	padding:2rem 3rem;
 	text-decoration:none;
   text-shadow:-2px -2px 10px #854629;
-  top: 160px;
   margin: 0 auto;
-  width: 550px;
-  position: relative;
+  width: 100%;
   text-align: center;
 }
 .myButton:hover {
 	background:linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
 	background-color:#bc3315;
 }
-.myButton:active {
-	position:relative;
-	top: 161px;
-}
 
 .text {
-  position: relative;
-  margin: 0 auto;
+  margin: 0 auto 3rem;
   display: block;
   text-align: center;
-  top: 25px;
   font-size: 25px;
-  font-weight: 400;
+	font-weight: 400;
+	font-family: inherit;
 }
 
 .container {
-  width: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+@media screen and (min-width: 550px) {
+	.container { padding: 0 1rem; }
+	.myButton { max-width: 550px; }
+}
+
+@media screen and (min-width: 768px) {
+	.container {
+		margin: 0 auto;
+		max-width: 720px;
+	}
+
+	.myButton { max-width: 550px; }
 }
