--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
 
+button:focus { outline: none; }
+
 .pictures_holder {
   margin: 0 auto;
   height: 160px;
@@ -38,9 +40,14 @@
 
 .reset {
   background-color: #F7968E;
+  color: white;
+  font-weight: 700;
 }
 
-button[data-setter]:hover { opacity: 0.5; }
+button[data-setter]:hover {
+  background: rgba(247, 150, 142, 0.5);
+  color: #333;
+}
 
 .container {
   position: relative;
