--- a/button-styles.css
+++ b/button-styles.css
@@ -12,7 +12,9 @@ button:focus { outline: none; }
 	background-color:#d0451b;
 	border-radius:23px;
 	border:6px solid #942911;
-	display: block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:inherit;
@@ -22,7 +24,8 @@ button:focus { outline: none; }
 	text-decoration:none;
   text-shadow:-2px -2px 10px #854629;
   margin: 0 auto;
-  width: 100%;
+	width: 100%;
+	height: 100%;
   text-align: center;
 }
 .myButton:hover {
@@ -32,12 +35,16 @@ button:focus { outline: none; }
 
 .container {
 	width: 100%;
+	height: 98vh;
 	display: flex;
 	flex-direction: column;
 }
 
 @media screen and (min-width: 550px) {
-	.container { padding: 0 1rem; }
+	.container {
+		padding: 0 1rem;
+		height: auto;
+	}
 }
 
 @media screen and (min-width: 768px) {
